[gd_scene load_steps=5 format=3 uid="uid://gmid67ebwr3m"]

[ext_resource type="Script" path="res://src/enemy_2.gd" id="1_fxdrt"]
[ext_resource type="Texture2D" uid="uid://dxkores5rgp5j" path="res://asstes/SPRITES/misc/drone/drone-3.png" id="2_ieimv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do46h"]
size = Vector2(89, 196.125)

[sub_resource type="CircleShape2D" id="CircleShape2D_jlxi1"]
radius = 1000.0

[node name="enemy2" type="CharacterBody2D"]
position = Vector2(0, -6)
motion_mode = 1
script = ExtResource("1_fxdrt")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(5.47567, 5.60347)
texture = ExtResource("2_ieimv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_do46h")

[node name="TimePeriod" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -74)
scale = Vector2(1.23548, 0.994872)

[node name="areaofeffect" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 79.4072)
shape = SubResource("CircleShape2D_jlxi1")

[node name="ProjectileContainer" type="Node2D" parent="."]
position = Vector2(0, 20)

[connection signal="timeout" from="TimePeriod" to="." method="_on_time_period_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
